DanielCv/DanielCv/Styles/Main.css
body{
    background-color: gray;
    text-align: center;
}

#links {
    width: 75%;
    margin: 0 auto;
    list-style: none;
    overflow: auto;
    background-color: lightgray;
    padding: 0;
}

#links li {
    display: inline-block;
    border: 1px solid black;
    margin: 2px;
    background-color: lightgray;
}

#links li a{
    display: block;
    margin: 5px;
    text-decoration: none;
    color: black;           
}

#links li a:hover {
   color: white;
}

#text {
    background-color: lightgray;
    width: 75%;
    margin: 0 auto;
    word-break: keep-all;
}

